[gd_scene load_steps=73 format=3 uid="uid://dd146oth7en2h"]

[ext_resource type="Script" path="res://src/horn_set.gd" id="1_gb0xi"]
[ext_resource type="PackedScene" uid="uid://cft857utgbacv" path="res://src/horn_item.tscn" id="2_w2ycw"]
[ext_resource type="Texture2D" uid="uid://cb16mixii2tto" path="res://sprites/HornLeftFront.png" id="3_ccgib"]
[ext_resource type="Texture2D" uid="uid://cskrdk4wpoxgd" path="res://sprites/HornBack.png" id="3_ibrih"]
[ext_resource type="Texture2D" uid="uid://ddu7sh3gecjxq" path="res://sprites/HornMiddle.png" id="4_natf7"]
[ext_resource type="Texture2D" uid="uid://chotidmfwin81" path="res://sprites/HornFront.png" id="7_bk3a4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5nuch"]
atlas = ExtResource("3_ibrih")
region = Rect2(0, 0, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_74go4"]
atlas = ExtResource("3_ibrih")
region = Rect2(1489, 0, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_bd1jk"]
atlas = ExtResource("3_ibrih")
region = Rect2(2978, 0, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtjn8"]
atlas = ExtResource("3_ibrih")
region = Rect2(4467, 0, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_ouydk"]
atlas = ExtResource("3_ibrih")
region = Rect2(5956, 0, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_0sw78"]
atlas = ExtResource("3_ibrih")
region = Rect2(0, 1899, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_u10ni"]
atlas = ExtResource("3_ibrih")
region = Rect2(1489, 1899, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_fg3hw"]
atlas = ExtResource("3_ibrih")
region = Rect2(2978, 1899, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_ad0x6"]
atlas = ExtResource("3_ibrih")
region = Rect2(4467, 1899, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_aso8y"]
atlas = ExtResource("3_ibrih")
region = Rect2(5956, 1899, 1489, 1899)

[sub_resource type="SpriteFrames" id="SpriteFrames_l2476"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5nuch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74go4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bd1jk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtjn8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ouydk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0sw78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u10ni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fg3hw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ad0x6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aso8y")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_pi5mp"]
atlas = ExtResource("3_ibrih")
region = Rect2(0, 3798, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_aoxgx"]
atlas = ExtResource("3_ibrih")
region = Rect2(1489, 3798, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_qqsl7"]
atlas = ExtResource("3_ibrih")
region = Rect2(2978, 3798, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_tt7sc"]
atlas = ExtResource("3_ibrih")
region = Rect2(4467, 3798, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_3nhsa"]
atlas = ExtResource("3_ibrih")
region = Rect2(5956, 3798, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmnhb"]
atlas = ExtResource("3_ibrih")
region = Rect2(0, 5697, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yevf"]
atlas = ExtResource("3_ibrih")
region = Rect2(1489, 5697, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_4sxlx"]
atlas = ExtResource("3_ibrih")
region = Rect2(2978, 5697, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_migo4"]
atlas = ExtResource("3_ibrih")
region = Rect2(4467, 5697, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3up6"]
atlas = ExtResource("3_ibrih")
region = Rect2(5956, 5697, 1489, 1899)

[sub_resource type="SpriteFrames" id="SpriteFrames_sl4wq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pi5mp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aoxgx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qqsl7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tt7sc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3nhsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmnhb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yevf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4sxlx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_migo4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3up6")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_w0tkj"]
atlas = ExtResource("4_natf7")
region = Rect2(0, 0, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0nml"]
atlas = ExtResource("4_natf7")
region = Rect2(1489, 0, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_wq6j5"]
atlas = ExtResource("4_natf7")
region = Rect2(2978, 0, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_nhpvq"]
atlas = ExtResource("4_natf7")
region = Rect2(4467, 0, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ywop"]
atlas = ExtResource("4_natf7")
region = Rect2(5956, 0, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_t587d"]
atlas = ExtResource("4_natf7")
region = Rect2(0, 1899, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_xoh58"]
atlas = ExtResource("4_natf7")
region = Rect2(1489, 1899, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_wy62a"]
atlas = ExtResource("4_natf7")
region = Rect2(2978, 1899, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_hukt5"]
atlas = ExtResource("4_natf7")
region = Rect2(4467, 1899, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_qrmt0"]
atlas = ExtResource("4_natf7")
region = Rect2(5956, 1899, 1489, 1899)

[sub_resource type="SpriteFrames" id="SpriteFrames_fwhcd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0tkj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0nml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wq6j5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nhpvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ywop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t587d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xoh58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wy62a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hukt5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrmt0")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_dvvjn"]
atlas = ExtResource("4_natf7")
region = Rect2(0, 3798, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvsb6"]
atlas = ExtResource("4_natf7")
region = Rect2(1489, 3798, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjm2r"]
atlas = ExtResource("4_natf7")
region = Rect2(2978, 3798, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nxf2"]
atlas = ExtResource("4_natf7")
region = Rect2(4467, 3798, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_gggxi"]
atlas = ExtResource("4_natf7")
region = Rect2(5956, 3798, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4d32"]
atlas = ExtResource("4_natf7")
region = Rect2(0, 5697, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvmnw"]
atlas = ExtResource("4_natf7")
region = Rect2(1489, 5697, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_pq2cc"]
atlas = ExtResource("4_natf7")
region = Rect2(2978, 5697, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmx5r"]
atlas = ExtResource("4_natf7")
region = Rect2(4467, 5697, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_88r0o"]
atlas = ExtResource("4_natf7")
region = Rect2(5956, 5697, 1489, 1899)

[sub_resource type="SpriteFrames" id="SpriteFrames_pd0k8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvvjn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvsb6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjm2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nxf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gggxi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4d32")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvmnw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pq2cc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmx5r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_88r0o")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_fwi43"]
atlas = ExtResource("3_ccgib")
region = Rect2(0, 0, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_bojoa"]
atlas = ExtResource("3_ccgib")
region = Rect2(1489, 0, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbcqk"]
atlas = ExtResource("3_ccgib")
region = Rect2(2978, 0, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_5adef"]
atlas = ExtResource("3_ccgib")
region = Rect2(4467, 0, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_pguom"]
atlas = ExtResource("3_ccgib")
region = Rect2(5956, 0, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_55msm"]
atlas = ExtResource("3_ccgib")
region = Rect2(0, 1899, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5172"]
atlas = ExtResource("3_ccgib")
region = Rect2(1489, 1899, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_gj1ki"]
atlas = ExtResource("3_ccgib")
region = Rect2(2978, 1899, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqpg8"]
atlas = ExtResource("3_ccgib")
region = Rect2(4467, 1899, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxi54"]
atlas = ExtResource("3_ccgib")
region = Rect2(5956, 1899, 1489, 1899)

[sub_resource type="SpriteFrames" id="SpriteFrames_eu77t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwi43")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bojoa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbcqk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5adef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pguom")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55msm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5172")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gj1ki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqpg8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxi54")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_gpw1q"]
atlas = ExtResource("7_bk3a4")
region = Rect2(0, 3798, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_cs6gb"]
atlas = ExtResource("7_bk3a4")
region = Rect2(1489, 3798, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_38qt7"]
atlas = ExtResource("7_bk3a4")
region = Rect2(2978, 3798, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdvnw"]
atlas = ExtResource("7_bk3a4")
region = Rect2(4467, 3798, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_8d5lt"]
atlas = ExtResource("7_bk3a4")
region = Rect2(5956, 3798, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ownt"]
atlas = ExtResource("7_bk3a4")
region = Rect2(0, 5697, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_0clig"]
atlas = ExtResource("7_bk3a4")
region = Rect2(1489, 5697, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_5r6uu"]
atlas = ExtResource("7_bk3a4")
region = Rect2(2978, 5697, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wgr7"]
atlas = ExtResource("7_bk3a4")
region = Rect2(4467, 5697, 1489, 1899)

[sub_resource type="AtlasTexture" id="AtlasTexture_3b18x"]
atlas = ExtResource("7_bk3a4")
region = Rect2(5956, 5697, 1489, 1899)

[sub_resource type="SpriteFrames" id="SpriteFrames_mxiuw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpw1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs6gb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_38qt7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdvnw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8d5lt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ownt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0clig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5r6uu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wgr7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3b18x")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[node name="HornSet" type="Node2D"]
script = ExtResource("1_gb0xi")
metadata/_edit_group_ = true

[node name="HornBack" parent="." instance=ExtResource("2_w2ycw")]
grow_frames = SubResource("SpriteFrames_l2476")
shatter_frames = SubResource("SpriteFrames_sl4wq")

[node name="HornMiddle" parent="." instance=ExtResource("2_w2ycw")]
grow_frames = SubResource("SpriteFrames_fwhcd")
shatter_frames = SubResource("SpriteFrames_pd0k8")

[node name="HornFront" parent="." instance=ExtResource("2_w2ycw")]
grow_frames = SubResource("SpriteFrames_eu77t")
shatter_frames = SubResource("SpriteFrames_mxiuw")
